# weekly-ai-ideas

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.json  pyproject.toml
.github/workflows/: weekly-newsletter.yml
genai_newsletter/: cli.py  config.py  emailer.py  env.py  http.py  ideabox.py  ideas.py  models.py  pipeline.py  render.py  storage.py
genai_newsletter/collectors/: arxiv.py  base.py  github.py  hackernews.py  reddit.py  rss.py
