[project]
name = "genai-newsletter"
version = "0.1.0"
description = "Collect GenAI trend signals and generate an ideas newsletter."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
genai-newsletter = "genai_newsletter.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
